// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SNP adapter can fetch features from volvox.bam using bam subadapter 1`] = `
Array [
  Object {
    "end": 1003,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Object {
      "cov": Object {
        "T": Object {
          "strands": Object {
            "-1": 1,
            "0": 0,
            "1": 0,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 7,
            "0": 0,
            "1": 10,
          },
          "total": 17,
        },
      },
      "total": 18,
    },
    "start": 1002,
    "uniqueId": "test-0-1002",
  },
  Object {
    "end": 1004,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 8,
            "0": 0,
            "1": 10,
          },
          "total": 18,
        },
      },
      "total": 18,
    },
    "start": 1003,
    "uniqueId": "test-0-1003",
  },
  Object {
    "end": 1005,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Object {
      "cov": Object {
        "A": Object {
          "strands": Object {
            "-1": 1,
            "0": 0,
            "1": 0,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 7,
            "0": 0,
            "1": 10,
          },
          "total": 17,
        },
      },
      "total": 18,
    },
    "start": 1004,
    "uniqueId": "test-0-1004",
  },
  Object {
    "end": 1006,
    "refName": "ctgA",
    "score": 19,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 10,
          },
          "total": 19,
        },
      },
      "total": 19,
    },
    "start": 1005,
    "uniqueId": "test-0-1005",
  },
  Object {
    "end": 1007,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {
        "A": Object {
          "strands": Object {
            "-1": 0,
            "0": 0,
            "1": 2,
          },
          "total": 2,
        },
        "T": Object {
          "strands": Object {
            "-1": 0,
            "0": 0,
            "1": 1,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 8,
          },
          "total": 17,
        },
      },
      "total": 20,
    },
    "start": 1006,
    "uniqueId": "test-0-1006",
  },
  Object {
    "end": 1008,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 11,
          },
          "total": 20,
        },
      },
      "total": 20,
    },
    "start": 1007,
    "uniqueId": "test-0-1007",
  },
  Object {
    "end": 1009,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {
        "T": Object {
          "strands": Object {
            "-1": 0,
            "0": 0,
            "1": 1,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 10,
          },
          "total": 19,
        },
      },
      "total": 20,
    },
    "start": 1008,
    "uniqueId": "test-0-1008",
  },
  Object {
    "end": 1010,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 11,
          },
          "total": 20,
        },
      },
      "total": 20,
    },
    "start": 1009,
    "uniqueId": "test-0-1009",
  },
  Object {
    "end": 1011,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 11,
          },
          "total": 20,
        },
      },
      "total": 20,
    },
    "start": 1010,
    "uniqueId": "test-0-1010",
  },
  Object {
    "end": 1012,
    "refName": "ctgA",
    "score": 19,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 10,
          },
          "total": 19,
        },
      },
      "total": 19,
    },
    "start": 1011,
    "uniqueId": "test-0-1011",
  },
]
`;

exports[`SNP adapter can fetch features from volvox.cram using cram subadapter 1`] = `
Array [
  Object {
    "end": 1003,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Object {
      "cov": Object {
        "T": Object {
          "strands": Object {
            "-1": 1,
            "0": 0,
            "1": 0,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 7,
            "0": 0,
            "1": 10,
          },
          "total": 17,
        },
      },
      "total": 18,
    },
    "start": 1002,
    "uniqueId": "test-0-1002",
  },
  Object {
    "end": 1004,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 8,
            "0": 0,
            "1": 10,
          },
          "total": 18,
        },
      },
      "total": 18,
    },
    "start": 1003,
    "uniqueId": "test-0-1003",
  },
  Object {
    "end": 1005,
    "refName": "ctgA",
    "score": 18,
    "snpinfo": Object {
      "cov": Object {
        "C": Object {
          "strands": Object {
            "-1": 1,
            "0": 0,
            "1": 0,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 7,
            "0": 0,
            "1": 10,
          },
          "total": 17,
        },
      },
      "total": 18,
    },
    "start": 1004,
    "uniqueId": "test-0-1004",
  },
  Object {
    "end": 1006,
    "refName": "ctgA",
    "score": 19,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 10,
          },
          "total": 19,
        },
      },
      "total": 19,
    },
    "start": 1005,
    "uniqueId": "test-0-1005",
  },
  Object {
    "end": 1007,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {
        "A": Object {
          "strands": Object {
            "-1": 0,
            "0": 0,
            "1": 2,
          },
          "total": 2,
        },
        "T": Object {
          "strands": Object {
            "-1": 0,
            "0": 0,
            "1": 1,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 8,
          },
          "total": 17,
        },
      },
      "total": 20,
    },
    "start": 1006,
    "uniqueId": "test-0-1006",
  },
  Object {
    "end": 1008,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 11,
          },
          "total": 20,
        },
      },
      "total": 20,
    },
    "start": 1007,
    "uniqueId": "test-0-1007",
  },
  Object {
    "end": 1009,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {
        "T": Object {
          "strands": Object {
            "-1": 0,
            "0": 0,
            "1": 1,
          },
          "total": 1,
        },
      },
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 10,
          },
          "total": 19,
        },
      },
      "total": 20,
    },
    "start": 1008,
    "uniqueId": "test-0-1008",
  },
  Object {
    "end": 1010,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 11,
          },
          "total": 20,
        },
      },
      "total": 20,
    },
    "start": 1009,
    "uniqueId": "test-0-1009",
  },
  Object {
    "end": 1011,
    "refName": "ctgA",
    "score": 20,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 11,
          },
          "total": 20,
        },
      },
      "total": 20,
    },
    "start": 1010,
    "uniqueId": "test-0-1010",
  },
  Object {
    "end": 1012,
    "refName": "ctgA",
    "score": 19,
    "snpinfo": Object {
      "cov": Object {},
      "delskips": Object {},
      "lowqual": Object {},
      "noncov": Object {},
      "ref": Object {
        "ref": Object {
          "strands": Object {
            "-1": 9,
            "0": 0,
            "1": 10,
          },
          "total": 19,
        },
      },
      "total": 19,
    },
    "start": 1011,
    "uniqueId": "test-0-1011",
  },
]
`;
